Fixes 2x2 whyCard spacing issue

--- a/src/components/WhyCardGrid/WhyCard/WhyCard.module.sass
+++ b/src/components/WhyCardGrid/WhyCard/WhyCard.module.sass
@@ -1,9 +1,10 @@
-@import ../../styles/global
+@import ../../../styles/global
 
 .whyCard
+  margin: 6px
   height: 250px
   width: 475px
-  padding: 30px 70px 50px
+  padding: 30px 50px 50px
   display: flex
   flex-direction: row
   justify-content: space-between
